Guardar Articulos Peta

--- a/app/src/main/res/layout/anadir_articulos.xml
+++ b/app/src/main/res/layout/anadir_articulos.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.alu2015059.jstyle.AnadirArticulo">
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/titulo"
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginEnd="8dp"
@@ -29,13 +30,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/titulo"
         app:srcCompat="@mipmap/ic_launcher"
         android:layout_marginLeft="8dp" />
 
     <Button
         android:id="@+id/foto_btn"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -44,7 +46,7 @@
         app:layout_constraintBottom_toTopOf="@+id/et_descripcion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/foto"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/titulo"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -183,24 +185,26 @@
         app:layout_constraintTop_toBottomOf="@+id/et_codigo" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_guardar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Guardar"
+        android:onClick="guardar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/btn_cancelar"
         app:layout_constraintTop_toBottomOf="@+id/et_precio" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_cancelar"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="Cancelar"
+        android:onClick="cancelar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
         android:layout_marginLeft="8dp" />
