Login and registro layouts created, registro working, login not working

--- a/app/src/main/res/layout/pagina_articulos.xml
+++ b/app/src/main/res/layout/pagina_articulos.xml
@@ -10,11 +10,13 @@
         android:id="@+id/et_buscador"
         android:layout_width="274dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Codigo"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_buscador"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,10 +24,12 @@
         android:id="@+id/btn_buscador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="59dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Buscar"
+        app:layout_constraintBottom_toTopOf="@+id/btn_volver"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/et_buscador"
         app:layout_constraintTop_toTopOf="parent" />
