--- a/app/src/main/res/layout/articulo_item.xml
+++ b/app/src/main/res/layout/articulo_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/ai_ArticuloImage"
+        android:id="@+id/ci_ArticuloImage"
         android:layout_width="85dp"
         android:layout_height="82dp"
         android:layout_marginStart="8dp"
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/ic_launcher" />
 
     <TextView
-        android:id="@+id/ai_ArticuloName"
+        android:id="@+id/ci_ArticuloName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -27,101 +27,106 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ai_ArticuloImage"
+        app:layout_constraintStart_toEndOf="@+id/ci_ArticuloImage"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/ai_ArticuloCant"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/ai_ArticuloImage"
-        app:layout_constraintTop_toBottomOf="@+id/ai_ArticuloName"
-        app:layout_constraintVertical_bias="0.05" />
-
     <Button
-        android:id="@+id/ai_btn_AnadirCarrito"
+        android:id="@+id/ci_btn_Eliminar"
         android:layout_width="81dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:text="Añadir"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ai_ArticuloName" />
+        app:layout_constraintTop_toBottomOf="@+id/ci_ArticuloName" />
 
     <TextView
         android:id="@+id/ai_ArticuloPrice"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="4dp"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/ai_ArticuloName"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="30dp"
-        android:layout_height="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Uds."
         android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ai_ArticuloPrice"
-        app:layout_constraintEnd_toStartOf="@+id/ai_ArticuloPrice"
-        app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintStart_toEndOf="@+id/ai_ArticuloCant"
-        app:layout_constraintTop_toBottomOf="@+id/ai_ArticuloName"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="30dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="36dp"
-        android:text="€"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ai_btn_AnadirCarrito"
-        app:layout_constraintEnd_toStartOf="@+id/ai_btn_AnadirCarrito"
-        app:layout_constraintTop_toBottomOf="@+id/ai_ArticuloName"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/ci_ArticuloImage"
+        app:layout_constraintTop_toBottomOf="@+id/ci_ArticuloName"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/ai_ArticuloCode"
-        android:layout_width="225dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/textView3"
+        android:layout_width="32dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginTop="8dp"
+        android:text="€"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/ci_btn_Eliminar"
+        app:layout_constraintEnd_toStartOf="@+id/ci_btn_Eliminar"
+        app:layout_constraintTop_toBottomOf="@+id/ci_ArticuloName" />
+
+    <TextView
+        android:id="@+id/ci_ArticuloCode"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ai_ArticuloImage" />
+        app:layout_constraintStart_toEndOf="@+id/code"
+        app:layout_constraintTop_toBottomOf="@+id/ci_ArticuloImage" />
 
     <TextView
         android:id="@+id/code"
-        android:layout_width="135dp"
-        android:layout_height="0dp"
+        android:layout_width="75dp"
+        android:layout_height="20dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Codigo : "
-        android:textSize="30sp"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ai_ArticuloCode"
+        app:layout_constraintEnd_toStartOf="@+id/ci_ArticuloCode"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ai_ArticuloImage" />
+        app:layout_constraintTop_toBottomOf="@+id/ci_ArticuloImage" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="75dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Cantidad : "
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ci_ArticuloCode"
+        app:layout_constraintTop_toBottomOf="@+id/ci_ArticuloImage" />
+
+    <TextView
+        android:id="@+id/ai_ArticuloCantidad"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/ci_ArticuloImage" />
 </android.support.constraint.ConstraintLayout>
