--- a/app/src/main/res/layout/pagina_articulos.xml
+++ b/app/src/main/res/layout/pagina_articulos.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pga_et_buscador" />
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/lista_articulos"
+        android:id="@+id/ca_srl_articulos"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
